[tool.poetry]
name = "flojoytestsequencegeneration"
version = "0.1.0"
description = "Generate python code specifically for testing hardware"
authors = ["Hristo <sandevh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11 <3.12"
fastapi = "^0.110.0"
langchain = {extras = ["all"], version = "^0.1.13"}
langchain-openai = "^0.1.1"
langchain-pinecone = "^0.0.3"
langserve = "^0.0.51"
pydantic = "^2.6.4"
python-dotenv = "^1.0.1"
langchain-anthropic = "^0.1.4"
uvicorn = "^0.29.0"
langchainhub = "^0.1.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
